[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/OverScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/World1/Items/torch.png" type="Texture" id=2]
[ext_resource path="res://assets/World1/Items/tochLit.png" type="Texture" id=3]
[ext_resource path="res://assets/font_score_label.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/font_score_value.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "light"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ null, null, null ]
}

[sub_resource type="Animation" id=4]
resource_name = "light"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ null, null, null ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=11]
size = 80
font_data = SubResource( 10 )

[node name="OverScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 1920.0

[node name="LblGameOver" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 725.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.388235, 0.521569, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "Game Over"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 729.0
margin_right = 1080.0
margin_bottom = 958.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 90.0
alignment = 1

[node name="TextureLightLeft" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 298.0
margin_right = 368.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/TextureLightLeft"]
anims/light = SubResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 372.0
margin_right = 707.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.752941, 0.733333, 0.254902, 1 )
text = "Score"
align = 1
valign = 1

[node name="TextureLightRight" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 711.0
margin_right = 781.0
margin_bottom = 90.0
texture = ExtResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/TextureLightRight"]
anims/light = SubResource( 4 )

[node name="LblScore" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1080.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 962.0
margin_right = 1080.0
margin_bottom = 1191.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 1080.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.752941, 0.733333, 0.254902, 1 )
text = "High score"
align = 1
valign = 1

[node name="LblHighScore" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 94.0
margin_right = 1080.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 6 )
text = "10"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1195.0
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_vertical = 3

[node name="BtnRestart" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 118.0
margin_top = 317.0
margin_right = 962.0
margin_bottom = 407.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 11 )
shortcut_in_tooltip = false
text = "Tap to restart"
flat = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
